--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -39,15 +39,50 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+
     <title>Hello World</title>
+    <style>
+        .app {
+            background: linear-gradient(#00caf2, #dddddd);
+        }
+        .mainForm {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            border: #4d4d4d 1px solid;
+            
+        }
+    </style>
 </head>
 
 <body>
     <div class="app">
-        <h1>PhoneGap</h1>
-        <div id="deviceready" class="blink">
-            <p class="event listening">Heelo</p>
-            <p class="event received">Hello world</p>
+        <div class="mainForm">
+            <div class="form-group">
+                <label for="activityName">Activity name</label>
+                <input type="email" class="form-control" id="activityName" aria-describedby="activityName" placeholder="Please enter activity name">
+            </div>
+
+            <div class="form-group">
+                <label for="location">Location</label>
+                <input type="text" class="form-control" id="location" aria-describedby="location" placeholder="Please enter location">
+            </div>
+
+            <div class="form-group">
+                <label for="date">Date</label>
+                <input type="date" class="form-control" id="date" aria-describedby="date" placeholder="Please enter date">
+            </div>
+
+            <div class="form-group">
+                <label for="timeAttending">Time of attending</label>
+                <input type="time" class="form-control" id="timeAttending" aria-describedby="timeAttending" placeholder="Please enter time of attending">
+            </div>
+
+            <div class="form-group">
+                <label for="reporterName">Name of reporter</label>
+                <input type="text" class="form-control" id="reporterName" aria-describedby="reporterName" placeholder="Please enter reporter name">
+            </div>
+            <button type="submit" class="btn btn-primary">Save</button>
         </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
